# oc_py

./: .gitignore  LICENSE  OCPY.py  README.md  orbit_param_calculator.py  other.py  pyproject.toml  rebound_oc_delay.py  requirements.txt  setup.cfg  tox.ini
Fitting_examples/DD_CrB/: DD_CrB_data.xlsx
Fitting_examples/DD_CrB/LMFit/L+LiTE+Q_ecc-free/: LLQ_eccfree.model  LiTE+Q+Lin_eccfree_emcee.ipynb
Fitting_examples/DD_CrB/LMFit/L+LiTE+Q_ecc0/: LLQ_ecc0.model  LiTE+Q+Lin_ecc0_emcee.ipynb
Fitting_examples/DD_CrB/LMFit/Lin+LiTE_ecc0/: LL_ecc0.model  LiTE+Lin_ecc0_emcee.ipynb
Fitting_examples/DD_CrB/LMFit/Lin+LiTE_free-ecc/: LiTE+Lin_ecc0_emcee.ipynb
Fitting_examples/DD_CrB/Probablystic/L+LiTE+Q_ecc-free/: DD_CrB_emcee_percentiles_200_5000_QuadLinLiTE1_1.out  LLQ_eccfree.model  LiTE+Q+Lin_eccfree_emcee.ipynb
Fitting_examples/DD_CrB/Probablystic/L+LiTE+Q_ecc0/: DD_CrB_emcee_percentiles_100_3000_QuadLinLiTE1_1.out  LLQ_ecc0.model  LiTE+Q+Lin_ecc0_emcee.ipynb  datawithoutwasp.data
Fitting_examples/NYVir/: ny_vir.xlsx
Fitting_examples/NYVir/.ipynb_checkpoints/: Model-checkpoint.ipynb
Fitting_examples/NYVir/nelder/: nelder.ipynb
Fitting_examples/NYVir/newtonian/: newtonian with prio.ipynb
Object_examples/: 000_parameter.ipynb  001_modelComponent.ipynb  002_oc_model.ipynb  003__oc_data.ipynb  003_manual_outliers.py  003_xy_boo - mintime.xlsx  004_deneme.py  004_fit.ipynb  005_fitemcee.ipynb  999_saved_model.model  999_xy_boo.xlsx  undefined_emcee_percentiles_100_1000_LinQuadLiTE_1.out  undefined_emcee_percentiles_100_3000_LinQuadLiTE_1.out
src/exe/For testing/: oclmfit.ipynb  ocpymc.ipynb
src/exe/NYVir/Newtonian/: ny_vir_lmfit.ipynb  ny_vir_pymc.ipynb  (+2 more)
src/exe/XYBoo/: data.ipynb  oclmfit.ipynb  ocpymc.ipynb  xy_boo_difcol.csv  xy_boo_difcol.xlsx
src/exe/XYBoo_IO/: oclmfit.ipynb  xy_boo.csv  xy_boo.xlsx
src/exe/chatgpt testing/: oc.ipynb  oclmfit.ipynb  ocpymc.ipynb
src/exe/dd crb/: DD_CrB_Minima_.xlsx  dd_crb.csv  dd_crb_keplerian_lmfit.ipynb  dd_crb_keplerian_pymc.ipynb  lin_lite.ipynb  lin_lite_e0.ipynb  llq.ipynb  llq_e0.ipynb  llq_efree.ipynb  oclmfit.ipynb
src/exe/mr del/: mrdel_for_baris.xlsx  oclmfit.ipynb
src/exe/tryout/: mohammad.ipynb
src/ocpy/: __init__.py  custom_types.py  data.py  data_example.py  errors.py  model_data.py  model_oc.py  newtonian.py  oc.py  oc_lmfit.py  oc_pymc.py  orbital_params.py  types.py  utils.py  visualization.py
tests/: test_data.py  test_lmfit_extended.py  test_model_component.py  test_newtonian.py  test_oc.py  test_oc_pymc.py  test_orbital_params.py  test_visualization.py  utils.py
(+13 files in other folders)
