[metadata]
name = ocpy
description =  oc_py is a O-C (Observed - Calculated) fitting application for astronomers.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1 Beta
author = Barış GÜLER, Özgür BAŞTÜRK, Mohammad NIAEI
author_email = baruş gulerbaris2000@gmail.com , obasturk@ankara.edu.tr, mohammad.niaei@tubitak.gov.tr
keywords = Observed-Calculated
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/etvproject122f358/oc_py
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    ocpy
install_requires =
    astropy
    numpy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
ocpy =
    py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401