[metadata]
name = ocpy
description =  oc_py is a O-C (Observed - Calculated) fitting application for astronomers.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1 Beta
author = Barış GÜLER, Özgür BAŞTÜRK, Mohammad NIAEI
author_email = baruş gulerbaris2000@gmail.com , obasturk@ankara.edu.tr, mohammad.niaei@tubitak.gov.tr
keywords = Observed-Calculated
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/etvproject122f358/oc_py
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    ocpy
install_requires =
    astropy>=7.2.0
    numpy>=2.3.5
    pandas>=2.3.3
    matplotlib>=3.10.7
    lmfit>=1.3.4
    pymc>=5.26.1
    pytensor>=2.35.1
    arviz>=0.22.0
    rebound>=4.4.11
    typing_extensions>=4.15.0
    corner>=2.2.3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
ocpy =
    py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401